--- a/index.html
+++ b/index.html
@@ -28,10 +28,9 @@
         overflow-x: hidden;
         display: flex;
         flex-direction: column;
-        justify-content: flex-start;
+        justify-content: center; /* Center content vertically */
         align-items: center; /* Center content horizontally */
         min-height: 100vh;
-        padding-top: 20px;
       }
 
       h1 {
